grasshopper-operator/tests/TestPolicies/OffendingPolicies/OverlyPermissive/overly-permissive.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: overly-permissive
  namespace: default
spec:
  podSelector: {} # This selects all pods in the namespace
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/24 # Allows traffic from the entire 0.0.0.0/24 range
    ports:
    - protocol: TCP
      port: 80 # Allows HTTP traffic
